--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,7 @@
 		</dependency>        
 	</dependencies>
     <build>
+    	<finalName>hello-kosa2</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-eclipse-plugin</artifactId>
